--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.4",
-        "vite": "^5.2.13"
+        "vite": "^5.3.3"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.5",
@@ -20,6 +20,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
+        "react-router-dom": "^6.24.1",
         "react-tabs": "^6.0.2"
     }
 }
