--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:v3FdsMCWgpF0dBj4Jgqz5H0ZKnndk4TLUOEzAwzMVfE=
+APP_KEY=base64:qv+u9Y8cdTWRpqDSUokGrRtP9arqcjSL7rBm532UCbo=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -50,9 +50,18 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
 MAIL_USERNAME=perezmedellinenriquefabian@gmail.com
-MAIL_PASSWORD=enrique25092003
+MAIL_PASSWORD=dhxdrawrojsrkrhf
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=perezmedellinenriquefabian@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.office365.com
+MAIL_PORT=587
+MAIL_USERNAME=21024@virtual.utsc.edu.mx
+MAIL_PASSWORD=enrique25092003/
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=21024@virtual.utsc.edu.mx
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
