--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-react": "^4.3.1",
+        "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-vue": "^4.5.0",
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
+        "sass": "^1.56.1",
         "tailwindcss": "^3.4.4",
-        "vite": "^5.3.3"
+        "vite": "^5.3.3",
+        "vue": "^3.2.37"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.5",
